--- a/network.ipynb
+++ b/network.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "dc2c847c",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "Libraries imported\n"
      ]
     }
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f20e99e1",
    "metadata": {},
    "outputs": [
@@ -91,7 +93,7 @@
        " 'is_connected': True}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
